Fix navbar on mobile

--- a/css/index.css
+++ b/css/index.css
@@ -40,48 +40,16 @@ body {
 }
 
 .nav-link {
-    font-size: 23px;
+    font-size: 5vmin;
     color: rgba(255, 255, 255, 0.8);
     text-decoration: none;
-    margin-right: 3%;
+    margin-right: 2%;
     transition: transform .2s;
 }
 
 .nav-link:hover {
     transform: scale(1.1);
     color: rgba(255, 255, 255, 1);
-}
-
-input[type=checkbox] {
-    display: none;
-}
-
-.burger {
-    display: none;
-    font-size: 2.5rem;
-    color: rgba(255, 255, 255, 0.8);
-    user-select: none;
-}
-
-@media (max-width: 768px) {
-    #nav {
-        flex-wrap: wrap;
-    }
-    .burger {
-        display: block;
-        flex-basis: 27%;
-    }
-    .nav-link {
-        display: none;
-    }
-    input[type=checkbox]:checked~.nav-link {
-        display: block;
-        /*flex-basis: 67vw;*/
-        flex-basis: 27%;
-        align-items: center;
-        margin-left: 67vw;
-        padding-bottom: 1vw;
-    }
 }
 
 #blob {
